Additional endpoints for defined scenarios

--- a/player-service/src/main/resources/application.yaml
+++ b/player-service/src/main/resources/application.yaml
@@ -13,3 +13,6 @@ eureka:
       default-zone: http://localhost:8761/eureka
   instance:
     hostname: localhost
+
+transfer-service:
+  url: http://localhost:8083
