--- a/player-service/src/main/resources/rest-api.yaml
+++ b/player-service/src/main/resources/rest-api.yaml
@@ -6,6 +6,18 @@ servers:
   - url: http://localhost:8081
 paths:
   /player:
+    get:
+      operationId: getPlayers
+      summary: GetAllPlayers
+      responses:
+        '200':
+          description: Player list
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/PlayerOverview'
     post:
       operationId: createPlayer
       summary: Creates player
@@ -122,6 +134,18 @@ components:
         careerStart:
           type: string
           format: date
+    PlayerOverview:
+      properties:
+        id:
+          type: integer
+          format: int64
+        firstName:
+          type: string
+        lastName:
+          type: string
+        teamId:
+          type: integer
+          format: int64
     ApplicationError:
       properties:
         message:
